# cookiecutter-ai-agent-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .gitignore  pyproject.toml
{{cookiecutter.project_slug}}/docker/: docker-compose.yml
{{cookiecutter.project_slug}}/docker/backend/: Dockerfile
{{cookiecutter.project_slug}}/docker/nginx/: nginx.conf
{{cookiecutter.project_slug}}/notebooks/: Untitled.ipynb
{{cookiecutter.project_slug}}/schemas/neo4j/: init_constraints.cypher
{{cookiecutter.project_slug}}/schemas/postgres/: create_tables.sql  initial_data.sql
{{cookiecutter.project_slug}}/schemas/qdrant/: init_collections.py
