[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
  { name = "{{ cookiecutter.author_name }}" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "langchain",
  "langgraph",
  "qdrant-client",
  "neo4j",
  "openai",
  "python-dotenv",
  "pydantic",
  "jinja2",
  "streamlit",
  "tqdm"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

